# P4

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Makefile.am  Makefile.in  P4.pri  P4.pro  README.md  aclocal.m4  blowup.tex  bootstrap.sh  compile_install_linux  compile_install_p4  config.h.in  configure  configure.ac  gcd.m  gcd.tex  gcf_window.html  infinity.tex  intparams_window.html  introduction.html  macOS_install_homebrew.sh  main.m  main.tex  mapledef.tex  num_coeff.m  num_coeff.tex  p4gcf.tex  plot_window.html  realroot.tex  settings_window.html  tools.tex  type.tex  version.h  weakfocus.m  weakfocus.tex  writelog.tex
QtCreator/: README.md  version.h
QtCreator/lyapunov/: Makefile.am  Makefile.in  checktbl.cpp  createtbl.cpp  lyapunov  lyapunov.cpp  lyapunov.h  lyapunov.pro  lypcoeff.cpp  polynom.cpp  readvf.cpp
QtCreator/lyapunov_mpf/: checktbl_mpf.cpp  createtbl_mpf.cpp  lyapunov_mpf.cpp  lyapunov_mpf.h  lyapunov_mpf.pro  polynom_mpf.cpp  readvf_mpf.cpp
QtCreator/mplstrip/: mplstrip  mplstrip.cpp  mplstrip.pro
QtCreator/p4/: Makefile.in  P4AboutDlg.cpp  P4Application.cpp  P4ArbitraryCurveDlg.cpp  P4ArbitraryCurveDlg.hpp  P4FindDlg.cpp  P4FindDlg.hpp  P4GcfDlg.cpp  P4GcfDlg.hpp  P4InputSphere.cpp  P4InputSphere.hpp  P4InputVF.cpp  P4InputVF.hpp  P4IntParamsDlg.cpp  P4IsoclinesDlg.cpp  P4IsoclinesDlg.hpp  P4LegendWnd.cpp  P4LimitCyclesDlg.cpp  P4LimitCyclesDlg.hpp  P4OrbitsDlg.cpp  P4ParamsDlg.cpp  P4ParamsDlg.hpp  P4ParentStudy.cpp  P4ParentStudy.hpp  P4PlotWnd.cpp  P4PlotWnd.hpp  P4PrintDlg.cpp  P4PrintDlg.hpp  P4ProcessWnd.cpp  P4SepDlg.cpp  P4SepDlg.hpp  P4SeparatingCurvesDlg.cpp  P4SeparatingCurvesDlg.hpp  P4SettingsDlg.cpp  P4SettingsDlg.hpp  P4Sphere.cpp  P4Sphere.hpp  P4StartDlg.cpp  P4StartDlg.hpp  P4VFParams.cpp  (+133 more)
QtCreator/separatrice/: Makefile.am  Makefile.in  separatrice  separatrice.cpp  separatrice.pro
binaries/: README.md  mk_p4_lnx.sh  mk_p4_win.sh
binaries/Linux/deb/: mk_p4_deb.sh
binaries/Linux/tarballs/: installP4.sh  installP4_root.sh  mk_p4_dbg.sh  mk_p4_lnx.sh  uninstallP4.sh  uninstallP4_root.sh
binaries/Windows/: inno_script.iss  installer_script.iss  mk_p4_win.sh
binaries/p4_lnx/help/: README.md  legend_window.html  output_window.html  p4.html  print_window.html  vf_window.html
build-aux/: autotroll.m4
help/: README.md  gcf_window.html  glossary.html  intparams_window.html  introduction.html  legend_window.html  limitcycles_window.html  newp4icon.xcf  orbits_window.html  output_window.html  p4.html  p4_charts.html  p4_window.html  p4_windows.html  p4_works.html  p4smallicon.png.old  parameters_window.html  plot_window.html  print_window.html  separatrices_window.html  settings_window.html  vf_window.html  view_window.html
lyapunov/: Makefile  checktbl.cpp  createtbl.cpp  lyapunov.cpp  lyapunov.h  lyapunov.pro  lypcoeff.cpp  polynom.cpp  readvf.cpp
macOS-install-tools/: mpfr.sh  qt.sh
mpfr/build.vc14/: lib_mpfr.sln  readme.txt  run_dll_tests.py
mpfr/build.vc14/dll_mpfr/: dll_mpfr.vcxproj
mpfr/build.vc14/tuneup/: mparam.h
mpfr/build.vc15/: dll_mpfr.sln  lib_mpfr.sln
mpfr/build.vc15/bench_dll/: bench_dll.vcxproj
mpfr/build.vc15/bench_lib/: bench_lib.vcxproj
mpfr/build.vc15/dll_mpfr/: dll_mpfr.vcxproj  dll_mpfr.vcxproj.filters
mpir/: config.h  gmp.h
mpir/build.vc14/: test-config.props
mpir/build.vc15/: test-config.props
mplstrip/: Makefile  mplstrip.cpp  readme.txt
p4/: client.txt  color.h  custom.h  file_paths.cpp  file_paths.h  file_tab.cpp  file_tab.h  file_vf.cpp  file_vf.h  main.cpp  main.h  math_changedir.cpp  math_changedir.h  math_charts.cpp  math_charts.h  math_findpoint.cpp  math_findpoint.h  math_gcf.cpp  math_gcf.h  math_intblowup.cpp  math_intblowup.h  math_limitcycles.cpp  math_limitcycles.h  math_numerics.cpp  math_numerics.h  math_orbits.cpp  math_orbits.h  math_p4.cpp  math_p4.h  math_polynom.cpp  math_polynom.h  math_separatrice.cpp  math_separatrice.h  moc_file_vf.cpp  moc_p4application.cpp  moc_win_about.cpp  moc_win_find.cpp  moc_win_gcf.cpp  moc_win_intparams.cpp  moc_win_legend.cpp  (+69 more)
p4_lnx/help/: p4_works.html
p4_rls/help/: orbits_window.html  separatrices_window.html
separatrice/: separatrice.cpp  separatrice.pro
src-gui/: Makefile.am  Makefile.in  README.md  src-gui.pro  version.h
src-gui/lyapunov/: Makefile  Makefile.am  Makefile.in  checktbl.cpp  createtbl.cpp  lyapunov  lyapunov.cc  lyapunov.cpp  lyapunov.h  lyapunov.pro  lypcoeff.cc  lypcoeff.cpp  polynom.cpp  readvf.cc  readvf.cpp
src-gui/lyapunov_mpf/: checktbl_mpf.cpp  createtbl_mpf.cpp  lyapunov_mpf.cpp  lyapunov_mpf.h  lyapunov_mpf.pro  lypcoeff_mpf.cpp  polynom_mpf.cpp  readvf_mpf.cpp
src-gui/p4/: Makefile.am  Makefile.in  P4AboutDlg.cpp  P4AboutDlg.hpp  P4Application.cpp  P4Application.h  P4Application.hpp  P4ArbitraryCurveDlg.cpp  P4ArbitraryCurveDlg.h  P4ArbitraryCurveDlg.hpp  P4Event.cpp  P4Event.h  P4FindDlg.cpp  P4FindDlg.h  P4FindDlg.hpp  P4GcfDlg.cpp  P4GcfDlg.h  P4GcfDlg.hpp  P4InputSphere.cpp  P4InputSphere.hpp  P4InputVF.cpp  P4InputVF.h  P4InputVF.hpp  P4IntParamsDlg.cpp  P4IntParamsDlg.h  P4IntParamsDlg.hpp  P4IsoclinesDlg.cpp  P4IsoclinesDlg.h  P4IsoclinesDlg.hpp  P4LegendWnd.cpp  P4LegendWnd.h  P4LegendWnd.hpp  P4LimitCycles.cpp  P4LimitCycles.h  P4LimitCyclesDlg.cpp  P4LimitCyclesDlg.hpp  P4OrbitsDlg.cpp  P4OrbitsDlg.h  P4OrbitsDlg.hpp  P4ParamsDlg.cpp  (+225 more)
src-gui/separatrice/: Makefile.am  Makefile.in  separatrice.cc  separatrice.cpp  separatrice.pro
src-mpl/: MakeTexMaple  Makefile  README.md  blowup.m  blowup.mpl  blowup.tex  cmaple.bat  gcd.mpl  gcd.tex  infinity.m  infinity.mpl  infinity.tex  main.m  main.mpl  main.tex  mapledef.tex  num_coeff.mpl  num_coeff.tex  p4.m  p4gcf.mpl  p4gcf.tex  realroot.m  realroot.mpl  realroot.tex  separatingcurves.m  separatingcurves.mpl  separatingcurves.tex  src-mpl.pro  tools.m  tools.mpl  tools.tex  type.m  type.mpl  type.tex  weakfocus.m  weakfocus.mpl  weakfocus.tex  writelog.m  writelog.mpl  writelog.tex
src-mpl/mplstrip/: Makefile  mplstrip  mplstrip.cpp  mplstrip.pro  readme.txt
(+1967 files in other folders)
