include $(top_srcdir)/build-aux/autotroll.mk

bin_PROGRAMS = p4
p4_SOURCES = \
	$(BUILT_SOURCES) \
	file_paths.cc \
	file_tab.cc \
	file_vf.cc \
	main.cc \
	math_changedir.cc \
	math_charts.cc \
	math_findpoint.cc \
	math_gcf.cc \
	math_intblowup.cc \
	math_limitcycles.cc \
	math_numerics.cc \
	math_orbits.cc \
	math_p4.cc \
	math_polynom.cc \
	math_separatrice.cc \
	p4application.cc \
	p4settings.cc \
	plot_points.cc \
	plot_tools.cc \
	print_bitmap.cc \
	print_points.cc \
	print_postscript.cc \
	print_xfig.cc \
	win_about.cc \
	win_event.cc \
	win_find.cc \
	win_gcf.cc \
	win_intparams.cc \
	win_legend.cc \
	win_limitcycles.cc \
	win_main.cc \
	win_orbits.cc \
	win_params.cc \
	win_plot.cc \
	win_print.cc \
	win_separatrice.cc \
	win_settings.cc \
	win_sphere.cc \
	win_vf.cc \
	win_view.cc \
	win_zoom.cc \
	color.h \
	custom.h \
	file_paths.h \
	file_tab.h \
	file_vf.h \
	main.h \
	math_changedir.h \
	math_charts.h \
	math_findpoint.h \
	math_gcf.h \
	math_intblowup.h \
	math_limitcycles.h \
	math_numerics.h \
	math_orbits.h \
	math_p4.h \
	math_polynom.h \
	math_separatrice.h \
	p4application.h \
	p4settings.h \
	plot_points.h \
	plot_tools.h \
	print_bitmap.h \
	print_points.h \
	print_postscript.h \
	print_xfig.h \
	win_about.h \
	win_event.h \
	win_find.h \
	win_gcf.h \
	win_intparams.h \
	win_legend.h \
	win_limitcycles.h \
	win_main.h \
	win_orbits.h \
	win_params.h \
	win_plot.h \
	win_print.h \
	win_separatrice.h \
	win_settings.h \
	win_sphere.h \
	win_vf.h \
	win_view.h \
	win_zoom.h 

p4_CXXFLAGS = $(QT_CXXFLAGS) $(AM_CXXFLAGS)
p4_CPPFLAGS = $(QT_CPPFLAGS) $(AM_CPPFLAGS)
p4_LDFLAGS  = $(QT_LDFLAGS) $(LDFLAGS)
p4_LDADD    = $(QT_LIBS) $(LDADD)

BUILT_SOURCES = \
	file_vf.moc.cc \
	p4application.moc.cc \
	win_about.moc.cc \
	win_find.moc.cc \
	win_gcf.moc.cc \
	win_intparams.moc.cc \
	win_legend.moc.cc \
	win_limitcycles.moc.cc \
	win_main.moc.cc \
	win_orbits.moc.cc \
	win_params.moc.cc \
	win_plot.moc.cc \
	win_print.moc.cc \
	win_separatrice.moc.cc \
	win_settings.moc.cc \
	win_sphere.moc.cc \
	win_vf.moc.cc \
	win_view.moc.cc \
	win_zoom.moc.cc