include $(top_srcdir)/build-aux/autotroll.mk

p4bindir=$(prefix)/@PACKAGE@/bin

p4bin_PROGRAMS = p4
p4_SOURCES = \
	$(BUILT_SOURCES) \
	file_paths.cpp \
	file_tab.cpp \
	file_vf.cpp \
	main.cpp \
	math_changedir.cpp \
	math_charts.cpp \
	math_findpoint.cpp \
	math_gcf.cpp \
	math_intblowup.cpp \
	math_limitcycles.cpp \
	math_numerics.cpp \
	math_orbits.cpp \
	math_p4.cpp \
	math_polynom.cpp \
	math_separatrice.cpp \
	p4application.cpp \
	p4settings.cpp \
	plot_points.cpp \
	plot_tools.cpp \
	print_bitmap.cpp \
	print_points.cpp \
	print_postscript.cpp \
	print_xfig.cpp \
	win_about.cpp \
	win_event.cpp \
	win_find.cpp \
	win_gcf.cpp \
	win_intparams.cpp \
	win_legend.cpp \
	win_limitcycles.cpp \
	win_main.cpp \
	win_orbits.cpp \
	win_params.cpp \
	win_plot.cpp \
	win_print.cpp \
	win_separatrice.cpp \
	win_settings.cpp \
	win_sphere.cpp \
	win_vf.cpp \
	win_view.cpp \
	win_zoom.cpp \
	color.h \
	custom.h \
	file_paths.h \
	file_tab.h \
	file_vf.h \
	main.h \
	math_changedir.h \
	math_charts.h \
	math_findpoint.h \
	math_gcf.h \
	math_intblowup.h \
	math_limitcycles.h \
	math_numerics.h \
	math_orbits.h \
	math_p4.h \
	math_polynom.h \
	math_separatrice.h \
	p4application.h \
	p4settings.h \
	plot_points.h \
	plot_tools.h \
	print_bitmap.h \
	print_points.h \
	print_postscript.h \
	print_xfig.h \
	win_about.h \
	win_event.h \
	win_find.h \
	win_gcf.h \
	win_intparams.h \
	win_legend.h \
	win_limitcycles.h \
	win_main.h \
	win_orbits.h \
	win_params.h \
	win_plot.h \
	win_print.h \
	win_separatrice.h \
	win_settings.h \
	win_sphere.h \
	win_vf.h \
	win_view.h \
	win_zoom.h 

p4_CXXFLAGS = $(QT_CXXFLAGS) $(AM_CXXFLAGS)
p4_CPPFLAGS = $(QT_CPPFLAGS) $(AM_CPPFLAGS)
p4_LDFLAGS  = $(QT_LDFLAGS) $(LDFLAGS)
p4_LDADD    = $(QT_LIBS) $(LDADD)

BUILT_SOURCES = \
	file_vf.moc.cpp \
	p4application.moc.cpp \
	win_about.moc.cpp \
	win_find.moc.cpp \
	win_gcf.moc.cpp \
	win_intparams.moc.cpp \
	win_legend.moc.cpp \
	win_limitcycles.moc.cpp \
	win_main.moc.cpp \
	win_orbits.moc.cpp \
	win_params.moc.cpp \
	win_plot.moc.cpp \
	win_print.moc.cpp \
	win_separatrice.moc.cpp \
	win_settings.moc.cpp \
	win_sphere.moc.cpp \
	win_vf.moc.cpp \
	win_view.moc.cpp \
	win_zoom.moc.cpp
